devops-platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-platform-svc
spec:
  type: NodePort
  selector:
    app: devops-platform
  ports:
    - port: 80
      targetPort: 80
      nodeport: 31080
  type: ClusterIP
