devops-platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-platform-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.devops-platform.40.82.176.176.nip.io
        - api.devops-platform.40.82.176.176.nip.io
      secretName: devops-platform-tls-secret
  rules:
    # Rota 1: Frontend
    - host: app.devops-platform.40.82.176.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-platform-frontend-svc
                port:
                  number: 80

    # Rota 2: Backend da API
    - host: api.devops-platform.40.82.176.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-platform-backend-svc
                port:
                  number: 3001
